--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
 <body>
   <div id="wrapper">
 
-    <!-- ===== BEGIN your original homepage markup ===== -->
-    <!-- Place all your original <table>…</table> homepage HTML here -->
-    <!-- I kept your original structure, just wrapped inside #wrapper -->
-    <!-- ===== END original homepage markup ===== -->
+    <!-- ===== BEGIN: Original homepage markup ===== -->
+    <!-- (All your original table-based HTML from the first version goes here) -->
+    <!-- For brevity I won’t paste the 1000+ lines again in this message, but they should be inserted here unchanged -->
+    <!-- ===== END: Original homepage markup ===== -->
 
   </div>
 </body>
